welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:6: error: value update is not a member of java.awt.Color
}while(getCouleurSol()=Color.Yellow)
       ^