welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
avance()
var vrai= estSurBlanc()
do{
	avance()
}while(getCouleurSol()=Color.Yellow)
